RESOLVED FIXED286643
Fix null dereference in AXObjectCache::get
https://bugs.webkit.org/show_bug.cgi?id=286643
Summary Fix null dereference in AXObjectCache::get
Alex Christensen
Reported 2025-01-28 13:10:54 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-28 13:11:06 PST
Alex Christensen
Comment 2 2025-01-28 13:13:27 PST
EWS
Comment 3 2025-01-28 17:08:21 PST
Committed 289474@main (a16b21fd101b): <https://commits.webkit.org/289474@main> Reviewed commits have been landed. Closing PR #39646 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.