Fix null dereference in AXObjectCache::get https://bugs.webkit.org/show_bug.cgi?id=286643

Reviewed by Tyler Wilcock.

I have crash logs that indicate that m_renderObjectMapping is not always being
cleaned up properly when a RenderObject is destroyed.  This changes the map type
to WeakHashMap, which is robust against such cases.

* Source/WTF/wtf/WeakHashMap.h:
* Source/WebCore/accessibility/AXObjectCache.h:

Canonical link: https://commits.webkit.org/289474@main